# signature-durability-benchmark

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  SKILL.md  SUBMISSION.md  aggregate_durability_scores.csv  cohort_manifest.tsv  hartung_knapp.json  i2_decomposition.json  lopo_cross_validation.json  per_cohort_effects.csv  permutation_validation.json  pyproject.toml  winsorize_outlier.json  within_program_durability.csv
archive/: README.md
config/: benchmark_config.yaml  cohort_manifest.tsv  confounder_panel.yaml  paper_target_signatures.tsv  signature_panel.tsv
paper/: clawrxiv.md  content_v3.md  content_v4.md  content_v6.md  main.tex
schema/: benchmark_protocol.schema.json  certificate.schema.json  manifest.schema.json
scripts/: build_archive_release_bundle.py  compute_expanded_effects.py  confounder_investigation.py  context_fingerprint.py  declare_prospective_round.py  download_geo_cohorts.py  external_hypoxia_validation.py  external_rnaseq_validation.py  external_validation.py  failure_mode_analysis.py  generalization_case_study.py  generate_cohort_data.py  generate_diagnostic_workflow_figure.py  generate_forest_plot.py  hartung_knapp.py  i2_decomposition.py  lopo_cross_validation.py  null_random_sigs_fpr.py  permutation_validation.py  process_expansion_cohorts.py  process_ifn_expansion_2.py  process_new_cohorts.py  prospective_holdout_prediction.py  prospective_round_evaluate.py  provenance_audit.py  rerun_all_expanded.py  rescued_signature_case_study.py  sensitivity_small_cohorts.py  stealth_reclassification.py  strictly_unique_schoggins.py  (+1 more)
(+140 files in other folders)
